package main

import (
	"context"
	"fmt"
	"log"
	"sort"
	"time"

	guuid "github.com/Lzww0608/GUUID"
	sessionpb "github.com/aetherflow/aetherflow/api/proto/session"
	statesyncpb "github.com/aetherflow/aetherflow/api/proto/statesync"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// çœŸå®çš„é›†æˆæµ‹è¯• - æµ‹è¯•å®é™…è¿è¡Œçš„æœåŠ¡

func main() {
	fmt.Println("================================")
	fmt.Println("  AetherFlow çœŸå®æ€§èƒ½æµ‹è¯•")
	fmt.Println("================================")
	fmt.Println()

	// æµ‹è¯• Session Service
	fmt.Println("ğŸ“Š æµ‹è¯• Session Service...")
	sessionLatencies := testSessionService()
	if len(sessionLatencies) > 0 {
		printStats("Session Service", sessionLatencies)
	} else {
		fmt.Println("âš ï¸  Session Service æœªè¿è¡Œï¼Œè·³è¿‡æµ‹è¯•")
	}
	fmt.Println()

	// æµ‹è¯• StateSync Service
	fmt.Println("ğŸ“Š æµ‹è¯• StateSync Service...")
	stateSyncLatencies := testStateSyncService()
	if len(stateSyncLatencies) > 0 {
		printStats("StateSync Service", stateSyncLatencies)
	} else {
		fmt.Println("âš ï¸  StateSync Service æœªè¿è¡Œï¼Œè·³è¿‡æµ‹è¯•")
	}
	fmt.Println()

	// ç«¯åˆ°ç«¯æµ‹è¯•
	if len(sessionLatencies) > 0 && len(stateSyncLatencies) > 0 {
		fmt.Println("================================")
		fmt.Println("  ğŸ“Š ç«¯åˆ°ç«¯æ€§èƒ½åˆ†æ")
		fmt.Println("================================")
		fmt.Println()

		sessionStats := calculateStats(sessionLatencies)
		statesyncStats := calculateStats(stateSyncLatencies)

		fmt.Printf("ç«¯åˆ°ç«¯ P99 ä¼°ç®—:\n")
		fmt.Printf("  Session:        %.2fms\n", float64(sessionStats.P99.Microseconds())/1000.0)
		fmt.Printf("  StateSync:      %.2fms\n", float64(statesyncStats.P99.Microseconds())/1000.0)
		fmt.Printf("  Gateway:        ~5ms (ä¼°ç®—)\n")
		fmt.Printf("  æ€»è®¡:           ~%.2fms\n",
			float64(sessionStats.P99.Microseconds())/1000.0+
				float64(statesyncStats.P99.Microseconds())/1000.0+5.0)
		fmt.Println()

		targetP99 := 50.0
		actualP99 := float64(sessionStats.P99.Microseconds())/1000.0 +
			float64(statesyncStats.P99.Microseconds())/1000.0 + 5.0

		if actualP99 < targetP99 {
			fmt.Printf("âœ… è¾¾æˆç›®æ ‡: P99 < %.0fms\n", targetP99)
			fmt.Printf("   å®é™…: %.2fms (ä¼˜äºç›®æ ‡ %.2fms)\n", actualP99, targetP99-actualP99)
		} else {
			fmt.Printf("âŒ æœªè¾¾ç›®æ ‡: P99 < %.0fms\n", targetP99)
			fmt.Printf("   å®é™…: %.2fms (è¶…å‡º %.2fms)\n", actualP99, actualP99-targetP99)
		}
	}

	fmt.Println()
}

func testSessionService() []time.Duration {
	// è¿æ¥ Session Service
	conn, err := grpc.Dial("localhost:9001",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(),
		grpc.WithTimeout(3*time.Second))

	if err != nil {
		log.Printf("æ— æ³•è¿æ¥åˆ° Session Service: %v", err)
		return nil
	}
	defer conn.Close()

	client := sessionpb.NewSessionServiceClient(conn)

	latencies := []time.Duration{}
	testCount := 100

	fmt.Printf("  è¿è¡Œ %d æ¬¡æµ‹è¯•...\n", testCount)

	for i := 0; i < testCount; i++ {
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)

		// æµ‹é‡åˆ›å»º Session çš„å»¶è¿Ÿ
		start := time.Now()

		sessionID, _ := guuid.NewV7()
		connID, _ := guuid.NewV7()

		_, err := client.CreateSession(ctx, &sessionpb.CreateSessionRequest{
			UserId:       fmt.Sprintf("user-%d", i),
			ClientIp:     "127.0.0.1",
			ClientPort:   9090,
			ConnectionId: connID.String(),
			SessionId:    sessionID.String(),
		})

		latency := time.Since(start)
		cancel()

		if err == nil {
			latencies = append(latencies, latency)

			if i%10 == 0 {
				fmt.Printf("  è¿›åº¦: %d/%d (æœ€è¿‘å»¶è¿Ÿ: %.2fms)\n", i+1, testCount, float64(latency.Microseconds())/1000.0)
			}

			// æ¸…ç† - åˆ é™¤åˆ›å»ºçš„ Session
			ctx2, cancel2 := context.WithTimeout(context.Background(), 2*time.Second)
			client.DeleteSession(ctx2, &sessionpb.DeleteSessionRequest{
				SessionId: sessionID.String(),
			})
			cancel2()
		}

		// æ§åˆ¶é€Ÿç‡
		time.Sleep(50 * time.Millisecond)
	}

	fmt.Printf("  âœ… å®Œæˆ %d æ¬¡æµ‹è¯•\n", len(latencies))

	return latencies
}

func testStateSyncService() []time.Duration {
	// è¿æ¥ StateSync Service
	conn, err := grpc.Dial("localhost:9002",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(),
		grpc.WithTimeout(3*time.Second))

	if err != nil {
		log.Printf("æ— æ³•è¿æ¥åˆ° StateSync Service: %v", err)
		return nil
	}
	defer conn.Close()

	client := statesyncpb.NewStateSyncServiceClient(conn)

	latencies := []time.Duration{}
	testCount := 100

	fmt.Printf("  è¿è¡Œ %d æ¬¡æµ‹è¯•...\n", testCount)

	for i := 0; i < testCount; i++ {
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)

		// æµ‹é‡åˆ›å»º Document çš„å»¶è¿Ÿ
		start := time.Now()

		docID, _ := guuid.NewV7()

		_, err := client.CreateDocument(ctx, &statesyncpb.CreateDocumentRequest{
			Id:        docID.String(),
			Name:      fmt.Sprintf("Test Doc %d", i),
			Type:      "text",
			CreatedBy: fmt.Sprintf("user-%d", i),
			Content:   []byte(fmt.Sprintf("Test content %d", i)),
		})

		latency := time.Since(start)
		cancel()

		if err == nil {
			latencies = append(latencies, latency)

			if i%10 == 0 {
				fmt.Printf("  è¿›åº¦: %d/%d (æœ€è¿‘å»¶è¿Ÿ: %.2fms)\n", i+1, testCount, float64(latency.Microseconds())/1000.0)
			}

			// æ¸…ç† - åˆ é™¤åˆ›å»ºçš„ Document
			ctx2, cancel2 := context.WithTimeout(context.Background(), 2*time.Second)
			client.DeleteDocument(ctx2, &statesyncpb.DeleteDocumentRequest{
				DocumentId: docID.String(),
			})
			cancel2()
		}

		// æ§åˆ¶é€Ÿç‡
		time.Sleep(50 * time.Millisecond)
	}

	fmt.Printf("  âœ… å®Œæˆ %d æ¬¡æµ‹è¯•\n", len(latencies))

	return latencies
}

type Stats struct {
	Min  time.Duration
	Max  time.Duration
	Avg  time.Duration
	P50  time.Duration
	P95  time.Duration
	P99  time.Duration
}

func calculateStats(latencies []time.Duration) *Stats {
	if len(latencies) == 0 {
		return &Stats{}
	}

	sorted := make([]time.Duration, len(latencies))
	copy(sorted, latencies)
	sort.Slice(sorted, func(i, j int) bool {
		return sorted[i] < sorted[j]
	})

	stats := &Stats{
		Min: sorted[0],
		Max: sorted[len(sorted)-1],
		P50: sorted[int(float64(len(sorted))*0.50)],
		P95: sorted[int(float64(len(sorted))*0.95)],
		P99: sorted[int(float64(len(sorted))*0.99)],
	}

	var sum time.Duration
	for _, l := range latencies {
		sum += l
	}
	stats.Avg = sum / time.Duration(len(latencies))

	return stats
}

func printStats(name string, latencies []time.Duration) {
	stats := calculateStats(latencies)

	fmt.Printf("%s æ€§èƒ½ç»Ÿè®¡:\n", name)
	fmt.Printf("  æµ‹è¯•æ¬¡æ•°:       %d\n", len(latencies))
	fmt.Printf("  P50 å»¶è¿Ÿ:       %.2fms\n", float64(stats.P50.Microseconds())/1000.0)
	fmt.Printf("  P95 å»¶è¿Ÿ:       %.2fms\n", float64(stats.P95.Microseconds())/1000.0)
	fmt.Printf("  P99 å»¶è¿Ÿ:       %.2fms\n", float64(stats.P99.Microseconds())/1000.0)
	fmt.Printf("  å¹³å‡å»¶è¿Ÿ:       %.2fms\n", float64(stats.Avg.Microseconds())/1000.0)
	fmt.Printf("  æœ€å°å»¶è¿Ÿ:       %.2fms\n", float64(stats.Min.Microseconds())/1000.0)
	fmt.Printf("  æœ€å¤§å»¶è¿Ÿ:       %.2fms\n", float64(stats.Max.Microseconds())/1000.0)
}
